descending live logic done

--- a/rpsgame.html
+++ b/rpsgame.html
@@ -12,7 +12,7 @@
         <div class="playercontainer">
             <div class="names" id="playername">Player's lives:
             </div>
-            <div class="livescontainer">
+            <div class="playerlivescontainer">
                 <img src="soul.png" alt="soul" id="playersoul1" class="soul">
                 <img src="soul.png" alt="soul" id="playersoul2" class="soul">
                 <img src="soul.png" alt="soul" id="playersoul3" class="soul">
@@ -22,7 +22,7 @@
         <div class="computercontainer">
             <div class="names">Computer's lives:
             </div>
-            <div class="livescontainer">
+            <div class="computerlivescontainer">
                 <img src="soul.png" alt="soul" id="computersoul1" class="soul">
                 <img src="soul.png" alt="soul" id="computersoul2" class="soul">
                 <img src="soul.png" alt="soul" id="computersoul3" class="soul">
