--- a/rpsgame.html
+++ b/rpsgame.html
@@ -19,6 +19,10 @@
             </div>
         </div>
 
+        <div class="toptext">
+            <button class="newgame">New game</button>
+        </div>
+
         <div class="computercontainer">
             <div class="names">Computer's lives:
             </div>
@@ -28,17 +32,20 @@
                 <img src="soul.png" alt="soul" id="computersoul3" class="soul">
             </div>
         </div>
+        <div class="picturecontainer">
+            <div class="picturetextdiv">
+            </div>
+            <div class="rockdiv">
+                <img src="rock.png" alt="rock" id="rock">
+            </div>
 
-        <div class="rockdiv">
-            <img src="rock.png" alt="rock" id="rock">
-        </div>
+            <div class="paperdiv">
+                <img src="paper.png" alt="paper" id="paper">
+            </div>
 
-        <div class="paperdiv">
-            <img src="paper.png" alt="paper" id="paper">
-        </div>
-
-        <div class="scissorsdiv">
-            <img src="scissors.png" alt="scissors" id="scissors">
+            <div class="scissorsdiv">
+                <img src="scissors.png" alt="scissors" id="scissors">
+            </div>
         </div>
 
         <div class="textdiv"> 
