souls decrement done, almost finish

--- a/rpsgame.html
+++ b/rpsgame.html
@@ -13,23 +13,23 @@
             <div class="names" id="playername">Player's lives:
             </div>
             <div class="playerlivescontainer">
+                <img src="soul.png" alt="soul" id="playersoul0" class="soul">
                 <img src="soul.png" alt="soul" id="playersoul1" class="soul">
                 <img src="soul.png" alt="soul" id="playersoul2" class="soul">
-                <img src="soul.png" alt="soul" id="playersoul3" class="soul">
             </div>
         </div>
 
-        <div class="toptext">
+        <!-- <div class="toptext">
             <button class="newgame">New game</button>
-        </div>
+        </div> -->
 
         <div class="computercontainer">
             <div class="names">Computer's lives:
             </div>
             <div class="computerlivescontainer">
-                <img src="soul.png" alt="soul" id="computersoul1" class="soul">
                 <img src="soul.png" alt="soul" id="computersoul2" class="soul">
-                <img src="soul.png" alt="soul" id="computersoul3" class="soul">
+                <img src="soul.png" alt="soul" id="computersoul1" class="soul">
+                <img src="soul.png" alt="soul" id="computersoul0" class="soul">
             </div>
         </div>
         <div class="picturecontainer">
